<resources>
    <string name="app_default">The system default</string>
    <string name="app_zh_CN">Simplified Chinese</string>
    <string name="app_zh_TW">Traditional Chinese</string>
    <string name="app_en">English</string>
     <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="app_lang_sys">Follow the system settings</string>
    <string name="login_title">Super</string>
    <string name="app_name">Super</string>
    <string name="album_add">Add Album</string>
    <string name="album_prompt_tag">You do not have the album, it may create a</string>
    <string name="album_title">Album</string>
    <string name="new_password_hint">Enter the new password</string>
    <string name="new_repassword_hint">Confirm New Password</string>
    <string name="new_repassword_title">New Password</string>
    <string name="title_more">More</string>
    <string name="location_distance">Distance</string>
    <string name="location_comprehensivescore">Composite score</string>
    <string name="btn_save">Save</string>
    <string name="location_title">Near Users</string>
    <string name="location_right">Filter</string>
    <string name="location_left">My Location</string>
    <string name="notify_title">Notice</string>
    <string name="authorize_title">Authorized Users</string>
    <string name="toast_nocity">You did not choose city information</string>
    <string name="session_title">Conversation</string>
    <string name="update_success">Successfully modified</string>
    <string name="session_title_more">Editor</string>
    <string name="title_mypoint">My Points </string>
    <string name="register_title">New User</string>
    <string name="update">Modification</string>
    <string name="hello_world">Hello woasdfasdfasdfasdfasfdasfdasfdsadfasdfasdfasfdsafasdfsfdsafdasfdsfsadfasdfasdfasdfasdfasrld!12311321321321321321321231321321321321231321231321231213213132132131321321321321321325648544544564564564564564564</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_preview">Business partner UI Preview</string>
    <string name="title_activity_main">Business partner</string>
    <string name="txt_comfirm">OK</string>
    <string name="txt_cannel">Cancel</string>
    <string name="my_evaluate">I want to evaluate</string>
    <string name="btn_enter">OK</string>
    <string name="btn_album_new">Immediately to create</string>
    <string name="btn_album_cancle">Do not need albums</string>
    <string name="btn_return">Back</string>
    <string name="title_content_login">Super</string>
    <string name="title_content_individual_center">Personal Center</string>
    <string name="remeber_password">Remember password</string>
    <string name="unremeber_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="btn_new_user">New User</string>
    <string name="txt_user_name_tag">Account:</string>
    <string name="txt_password_tag">Password:</string>
    <string name="txt_phone_hint">Enter the phone number</string>
    <string name="txt_password_hint">Please enter a password</string>
    <string name="txt_register_phone_hint">Enter the phone number/E-mail</string>
    <string name="txt_register_password_hint">Please enter a password</string>
    <string name="location_load">Retrieving location information......</string>
    <string name="txt_register_repassword_hint">Confirm password</string>
    <string name="txt_register_recommended_hint">Enter the number of people (members or certification)</string>
    <string name="txt_register_tag">After filling Recommended by phone number, you become a VIP member, you can recommend people to return 10 points。</string>
    <string name="txt_protocol_tag">填写推荐人手机号，您成为VIP会员后，推荐人和您可以返回10个积分。
	    用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议
	    用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议
	    用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议
	    用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议
	    用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议
	    用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议
	    用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议
	    用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议
	    用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议用户协议
	    用户协议用户协议用户协议用户协议
</string>
    <string name="txt_protocol_check_tag">I have read the user agreement</string>
    <string name="protocol_btn_comfirm_tag">I agree</string>
    <string name="protocol_btn_cnanel_tag">I do not agree</string>
    <string name="dialog_register_txt_title_tag">Congratulations, successful registration！</string>
    <string name="register_validate_txt_validate_tag">Please enter the phone verification code</string>
    <string name="chat_box_expra_expression">Expression</string>
    <string name="chat_box_expra_camera">Camera</string>
    <string name="chat_box_expra_pricture">Picture</string>
    <string name="chat_box_expra_location">Location</string>
    <string name="register_grzl_must">*</string>
    <string name="register_grzl_nickname">Nickname:</string>
    <string name="register_grzl_accout_type">Account Types:</string>
    <string name="register_grzl_service_location">Dating Scene:</string>
    <string name="register_grzl_sex">Sex:</string>
    <string name="register_grzl_brith">Date of birth:</string>
    <string name="register_grzl_phone">Phone:</string>
    <string name="register_grzl_qq">QQ:</string>
    <string name="register_grzl_height">Height(cm):</string>
    <string name="register_grzl_body">Body weight(kg):</string>
    <string name="register_grzl_profession">Profession:</string>
    <string name="register_grzl_wages">Willingness to pay:</string>
    <string name="register_grzl_signature">Signature:</string>
    <string name="register_head_btn_select_tag">Use Album</string>
    <string name="register_head_btn_select_camera_tag">Using the camera</string>
    <string name="register_head_title_right_tag">Next</string>
    <string name="register_head_title_left_tag">Skip</string>
    <string name="register_head_title">Set Picture</string>
    <string name="register_head_auth_btn_select_tag">Photo</string>
    <string name="register_head_auth_title_right_tag">Next</string>
    <string name="register_head_auth_title_left_tag">Skip</string>
    <string name="register_head_auth_title">Certification Avatar</string>
    <string name="register_head_auth_tag">Certification avatar is not displayed in the software, just as a system administrator for the photo for comparison。</string>
    <string name="toast_sdcard_mounted">SD card out, you can not use some features!</string>
    <string name="toast_sdcard_available">SD card storage space!</string>
    <string name="toast_network">Please check whether the network connection is normal!</string>
    <string name="modify_password_edit_password_hint">Enter the original password</string>
    <string name="modify_password_edit_newpassword_hint">Enter the new password</string>
    <string name="modify_password_edit_renewpassword_hint">Identify new password</string>
    <string name="modify_password_title">Change Password</string>
    <string name="individual_centerActivity_title">Personal Center</string>
    <string name="individual_centerActivity_logining">Log out</string>
    <string name="individual_centerActivity_photo_tag">My Album</string>
    <string name="individual_centerActivity_location_tag">My Location</string>
    <string name="individual_centerActivity_hide_tag">Privacy Settings</string>
    <string name="individual_centerActivity_info_tag">Personal Information</string>
    <string name="individual_centerActivity_sms_tag">SMS Tell a friend</string>
    <string name="individual_centerActivity_point_tag">My Points</string>
    <string name="individual_centerActivity_modify_password_tag">Change Password</string>
    <string name="individual_centerActivity_more_tag">More</string>
    <string name="getback_password">Forgot Password</string>
    <string name="detail_info_signature">Signature ：</string>
    <string name="detail_info_albums">Album ：</string>
    <string name="detail_info_qq">Q  Q ：</string>
    <string name="detail_info_tall">Height(cm) ：</string>
    <string name="detail_info_weight">Body weight(kg) ：</string>
    <string name="detail_info_job">Occupation ：</string>
    <string name="detail_info_mobilephone">Phone number ：</string>
    <string name="detail_info_salary">Salary wishes ：</string>
    <string name="detail_info_savor">Good love interest ：</string>
    <string name="details_appearance_score_tag">Appearance Rating:</string>
    <string name="details_service_score_tag">Service Ratings:</string>
    <string name="details_charm_tag">Charisma:</string>
    <string name="details_btn_auth">I want to Certification</string>
    <string name="details_btn_vip">Become a VIP</string>
    <string name="authed_customer">Authorized Users</string>
    <string name="privacy_search">I forbid search</string>
    <string name="privacy_head">Avatar</string>
    <string name="privacy_albums">Album</string>
    <string name="privacy_qq">QQ</string>
    <string name="privacy_mobliephone">Mobile</string>
    <string name="privacy_setting">Privacy Settings</string>
    <string name="tocash">Withdraw Application</string>
    <string name="mypoint_auth">I want to Certification</string>
    <string name="mypoint_vipbuy">Buy</string>
    <string name="mypoint_viprecharge">Recharge</string>
    <string name="mypoint_vipdeadline">Membership term:</string>
    <string name="mypoint_point">Integration</string>
    <string name="mypoint_tocashpoint">Points can withdraw cash:</string>
    <string name="mypoint_zhu">Note:</string>
    <string name="mypoint_eg">Apply to become a member, you can view the user data \ n Deals Member Price: 10 yuan / month \ n 1 cell corresponds to an integral \ n have any questions, detailed consultation QQ：1234567</string>
    <string name="conditionfilter_title">Filter</string>
    <string name="conditionfilter_sex">Sex selection:</string>
    <string name="conditionfilter_service">Service occasions:</string>
    <string name="conditionfilter_logintime">Login Time:</string>
    <string name="conditionfilter_auth">Whether certification:</string>
    <string name="conditionfilter_broker">Are brokers:</string>
    <string name="conditionfilter_composite">Are there composite score:</string>
    <string name="conditionfilter_age">Age:</string>
    <string name="conditionfilter_distance">Distance:</string>
    <string name="conditionfilter_distanceone">Km</string>
    <string name="conditionfilter_ageone">year</string>
    <string name="conditionfilter_tall">Height:</string>
    <string name="conditionfilter_tallone">cm</string>
    <string name="conditionfilter_weight">Body weight:</string>
    <string name="conditionfilter_weightone">kg</string>
    <string name="input_accountmobile">mobile</string>
    <string name="input_password">password</string>
    <string name="login">login</string>
    <string name="tel_phone">mobile:</string>
    <string name="input_telphone">mobile!</string>
    <string name="nick_name">nickname:</string>
    <string name="input_nick_name">nickname</string>
    <string name="pass_word">password</string>
    <string name="sure_password">password</string>
    <string name="input_surepassword">password</string>
    <string name="sex">Sex:</string>
    <string name="sex_man">Male</string>
    <string name="sex_woman">Female</string>
    <string name="register">register</string>
   	<string name="input_phonenumber_or_email">input phonenumber or email</string>
   	<string name="please_input">please input</string>
   	<string name="sure">OK</string>
</resources>