<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="@dimen/layout_size_20"
        android:layout_marginTop="@dimen/layout_size_10"
        android:src="@drawable/ic_launch" />

    <EditText android:id="@+id/userName" 
        android:background="@drawable/input"
         android:paddingLeft="@dimen/layout_size_10" 
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:layout_marginLeft="@dimen/layout_size_30" 
         android:layout_marginTop="@dimen/layout_size_20" 
         android:layout_marginRight="@dimen/layout_size_30"
          android:hint="@string/input_accountmobile" />

    <EditText
        android:id="@+id/userPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_size_30"
        android:layout_marginRight="@dimen/layout_size_30"
        android:layout_marginTop="10dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/layout_size_10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/recordPswFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_size_10"
        android:layout_marginLeft="@dimen/layout_size_20"
        android:layout_marginRight="@dimen/layout_size_20"
        android:layout_marginTop="@dimen/layout_size_10"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_size_10" >

        <CheckBox
            android:id="@+id/login_checkBox_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/remeber_password" />

        <TextView android:textColor="@color/black" 
            android:layout_gravity="center" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/remeber_password" />
        
        <TextView
            android:id="@+id/login_unremember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/unremeber_password"
            android:textColor="@color/green"
            android:textSize="16sp" />

    </LinearLayout>

    <Button android:textSize="@dimen/txt_size_max_20"
         android:textColor="@color/white" android:id="@+id/loginBtn"
          android:background="@drawable/login_btn" 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:layout_marginLeft="@dimen/layout_size_30" 
          android:layout_marginTop="@dimen/layout_size_10" 
          android:layout_marginRight="@dimen/layout_size_30" 
          android:layout_marginBottom="@dimen/layout_size_10"
           android:text="@string/login" />

    <Button android:layout_gravity="right"
         android:id="@+id/regBtn" 
         android:background="@drawable/noaccounttxt_btn" 
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/layout_size_30" 
          android:layout_marginTop="@dimen/layout_size_10"
           android:layout_marginRight="@dimen/layout_size_40" 
        android:layout_marginBottom="@dimen/layout_size_10" />

</LinearLayout>